# vultron

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Testbed/: CMakeLists.txt
Testbed/src/: main.cpp
Vultron/: CMakeLists.txt
Vultron/assets/meshes/: enemy_1.FBX
Vultron/assets/shaders/: bloom_downsample.comp  bloom_downsample.comp.spv  bloom_upsample.comp  bloom_upsample.comp.spv  brdf.frag  brdf.vert  composite.frag  composite.frag.spv  composite.vert  composite.vert.spv  filtercube.vert  filtercube.vert.spv  irradiance.frag  line.frag  line.vert  line.vert.spv  particle.vert  particle.vert.spv  particle_emit.comp  particle_emit.comp.spv  particle_sort.comp  particle_sort.comp.spv  particle_update.comp  particle_update.comp.spv  prefilter.frag  scene.frag  scene.frag.spv  scene.vert  scene.vert.spv  sdf.frag  sdf.frag.spv  shadow.frag  shadow.vert  shadow.vert.spv  shadow_skeletal.vert  shadow_skeletal.vert.spv  skeletal.comp  skeletal.comp.spv  skeletal.vert  skeletal.vert.spv  (+14 more)
Vultron/include/Vultron/: SceneRenderer.h  Types.h  Vultron.h  Window.h
Vultron/include/Vultron/Core/: Queue.h  Singleton.h
Vultron/include/Vultron/Vulkan/: Debug.h  Utils.h  VulkanAnimation.h  VulkanBackend.h  VulkanBuffer.h  VulkanComputePipeline.h  VulkanContext.h  VulkanEnvironmentMap.h  VulkanFontAtlas.h  VulkanImage.h  VulkanInitializers.h  VulkanMaterial.h  VulkanMesh.h  VulkanRenderPass.h  VulkanRenderer.h  VulkanResourcePool.h  VulkanShader.h  VulkanSprite.h  VulkanSwapchain.h  VulkanTypes.h  VulkanUtils.h
Vultron/src/: SceneRenderer.cpp  Vultron.cpp  Window.cpp
Vultron/src/Vulkan/: Debug.cpp  Utils.cpp  VulkanAnimation.cpp  VulkanBackend.cpp  VulkanBuffer.cpp  VulkanComputePipeline.cpp  VulkanContext.cpp  VulkanEnvironmentMap.cpp  VulkanFontAtlas.cpp  VulkanImage.cpp  VulkanInitializers.cpp  VulkanMaterial.cpp  VulkanMesh.cpp  VulkanRenderPass.cpp  VulkanRenderer.cpp  VulkanResourcePool.cpp  VulkanShader.cpp  VulkanSprite.cpp  VulkanSwapchain.cpp  VulkanUtils.cpp
Vultron/tools/: compile_shaders.bat  compile_shaders.sh  cut_bone_mesh.py  font_to_img.py  pack_animation.py  pack_image.py  pack_mesh.py  pack_particle_atlas.py  pack_skeletal_mesh.py  requirements.txt  shaderc.py  skeletal_exporter.py
Vultron/tools/env_map_gen/: CmakeLists.txt  main.cpp
